webroot/css/style.css
/* ... */
.gl-button-link-black {
    color: #000000;
    font-weight: 100;
    border-radius: 0px;
    /* background-color: #FFFFFF; */
    padding-right: 0.5rem !important;
    margin-right: 1.5rem !important;
    padding-top: 0.5rem !important;
    margin-top: 1.5rem !important;
    padding-left: 0.5rem !important;
    margin-left: 1.5rem !important;
    padding-bottom: 0.5rem !important;
    margin-bottom: 1.5rem !important;
    font-size: 25px;
    border: 1px solid #000000;
    font-family: "open sans", helvetica, sans-serif;
    text-transform: uppercase;
    position: absolute;
}



.gl-navlink:hover, .gl-button-link:hover {
    color: #FFFFFF;
    text-decoration: none;
}

.gl-button-link-inverse:hover {
    color: #FFFFFF;
    text-decoration: none;
}

.gl-button-link-black:hover {
    color: #000000;
    text-decoration: none;
}

.gl-font-1 {
    font-family: "Bebas Neue", bebas, helvetica, sans-serif !important;
}

.gl-font-2 {
    font-family: "Monstserrat Regular", helvetica, sans-serif !important;
}

.gl-font-3 {
    font-family: "Brandon Grotesque", helvetica, sans-serif !important;
}

.gl-font-4 {
    font-family: "Open Sans", helvetica, sans-serif !important;
}

.justified {
    text-align: justify;
}

.italic {
    font-style: italic;
}

.red-font {
    color: #a5252d;
}

.gl-big-body-text {
    font-size: 40px;
}

.gl-small-body-text {
    font-size: 25px;
}

.right-justify {
    text-align: right;
}

.fit-width {
    width: 100%;
    height: auto;
    padding: 0;
}

.headliner-text-bold {
    font-weight: bold;
    font-size: 25px;
    text-align: justify;
}

.headliner-text {
    font-weight: normal;
    font-size: 20px;
    text-align: justify;
}

.row {
    margin-left: 0;
    margin-right: 0;
}

.headliner-row {
    padding-bottom: 5%;
    border-bottom: 3px solid;
    border-bottom-color: black;
}

.container.row{
    margin-left: -15px;
    margin-right: -15px;
}

.text-on-image {
    position: absolute;
    top: 33%;
    left: 10%;
    text-align: left;
}

.lesser-text-on-image {
    position: absolute;
    top: 50%;
    left: 50%;
    text-align: right;
}

.image-header {
    font-size: 40px;
    color: white;
    text-align: center;
}

.subtext {
    font-size: 25px;
    word-wrap: normal;
    font-style: italic;
    color: white;
    text-align: center;
}

.lesser-subtext {
    font-size: 15px;
    word-wrap: normal;
    color: white;
    text-align: center;
}

.lesser-image-header {
    font-size: 25px;
    word-wrap: normal;
    text-align: center;
    color: white;
}

.article-header {
    font-size: 35px;
    text-align: justify;
    font-weight: bold;
    color: black;
}

.article-body {
    font-size: 14px;
    text-align: justify;
    color: black;
}

.text-centered {
    text-align: center;
}

.bump-down {
    margin-top: 10%;
}

.pre-roll-type {
    min-width: 100%;
    max-width: 100vw;
    max-height: 100vh;
}

.emphasis {
    font-weight: bolder;
}

.z-index-1 {
    z-index: 1;
}

.appear-after-click {
    display: none;
}

.font-20px {
    font-size: 20px;
}

.font-18px {
    font-size: 18px;
}

.font-18px {
    font-size: 18px;
}

.inline-flex {
    display: inline-flex !important;
}

.constrained-width-button {
    width: 11rem;
}

.transparent-bg {
    background-color: none;
}

.light-gray-bg {
    background: #FBFAFA;
}

.mobilehomebutton, .mobilehomebutton:visited {
    border-radius: 0px;
    border: 1px solid black;
    color: black;
    margin: 2px 2px 2px 2px;
    padding: 3px 3px 3px 3px;
    text-decoration: none;
    position: absolute;
}

.gl-input-field, .gl-input-field-mobile {
    border-radius: 2px;
    font-family: "open sans", helvetica, sans-serif;
    border: 1px solid #ababab;
}

.gl-input-field {
    width: 32%;
    max-width: 200px;
    padding-top: 0.5rem;
    padding-left: 0px;
    padding-bottom: 0.5rem;
    padding-right: 0px;
    font-size: 0.75rem;
    margin-bottom: 3.5rem;
}

.gl-input-field-mobile {
    width: 100%;
    padding-top: 7px;
    padding-bottom: 7px;
    margin-top: 5px;
    margin-bottom: 5px;
}


#demo-wrapper{
    margin: 0 auto;
    width: 100vw;
  }
  
  #outer {
    background-image: url("https://image.ibb.co/bucnbL/black-iphone.png");
    background-position: center;
    background-repeat: no-repeat;
    background-size: 364px 84vmin;
  }
  
  #demo-details {
    margin: 13vmin 4vmin;
  }
  
  #demo-text {
    font-family: "Monstserrat Regular", helvetica, sans-serif !important;
    margin: 6vmin 0;
    font-weight: bold;
    font-size: 2.1vmin;
    text-align: center;
  }
  
  #demo-adtype {
    font-family: "Bebas Neue", bebas, helvetica, sans-serif !important;
    font-size: 37px;
    margin: 13px 0;
  }
  
  #dropdown-menu-button {
    background-color: transparent;
    color: black;
    border-radius: 0;
    border-color: #c5c5c5;
    border-width: 2px;
    line-height: 31px;
    text-align: left;
    padding: 7px;
    letter-spacing: 1px;
    width: 122px;
    font-size: 22px;
  }
  
  .dropdown-item {
    cursor: pointer;
  }
  
  .dropdown-item.active, .dropdown-item:active {
    color: white;
    background-color: #a5252d;
  }
  
  .demo-description {
    float: inline-start;
    text-align: justify;
  }
  
  #demo-iframe #outer {
    min-height: 84vmin;
    text-align: center;
    margin: 1vmin 0 0 10vmin;
  }
  
  #demo-iframe #outer .image {
    position: relative;
    width: 33vmin;
    min-width: 320px;
    height: 66.5vmin;
    top: 7.5vmin;
  }
  
  
  
  
  #demo-mobile-wrapper{
    min-height: 200vmin;
    width: 100vw;
  }
  
  #demo-mobile-details {
    margin: 8px auto;
    display: block;
    width: 59vw;
  }
  
  #mobile-outer {
    background-image: url("https://image.ibb.co/bucnbL/black-iphone.png");
    background-position: center;
    background-repeat: no-repeat;
    background-size: 346px 178vmin;
  }
  
  #demo-mobile-wrapper #demo-text {
    font-size: 5.5vmin;
    margin: 11vmin 0;
  }
/* ... */

